--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>IO Proj</title>
+  <title>IO Proj 2022/2023</title>
   <meta name="description" content="2022/2023 Group Lab4 Project for Software Engineering at Cracow University of Technology">
 </head>
 
