second commit for PR

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
-  Website body is here. Here is example content of pull request.
+  Website body is here.
+  Here is example content of pull request.
+  Second commit content for PR.
 </body>
 </html>
