separate login page specific css

--- a/html/login/index.html
+++ b/html/login/index.html
@@ -4,6 +4,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
   <link href="../css/main.css" rel="stylesheet" />
+  <link href="login.css" rel="stylesheet" />
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
@@ -14,20 +15,20 @@
       <img src="../images/v1_10.png">
       <p>Liczydło kalorii </p>
     </div>
-    <div class="logowanie">
+    <div class="side_panel">
       <p>Logowanie</p>
       <form action="#" class="login_panel" id="login_form">
         <div class="text_input_wrapper">
           <p>Login </p>
           <div class="text_input">
-            <input type="text" placeholder="jan.kowalski" />
+            <input type="text" name="imie" placeholder="jan.kowalski" />
           </div>
         </div>
 
         <div class="text_input_wrapper">
           <p>Hasło</p>
           <div class="text_input">
-            <input type="password" placeholder="*******">
+            <input type="password" name="password" placeholder="*******">
             <p>POKAŻ</p>
           </div>
         </div>
