handle submit login form

--- a/html/login/index.html
+++ b/html/login/index.html
@@ -21,7 +21,7 @@
         <div class="text_input_wrapper">
           <p>Login </p>
           <div class="text_input">
-            <input type="text" name="imie" placeholder="jan.kowalski" />
+            <input type="text" name="login" placeholder="jan.kowalski" />
           </div>
         </div>
 
