--- a/src/main/resources/static/login/index.html
+++ b/src/main/resources/static/login/index.html
@@ -17,11 +17,11 @@
     </div>
     <div class="side_panel">
       <p>Logowanie</p>
-      <form action="#" class="login_panel" id="login_form">
+      <form action="/login" method="post" class="login_panel" id="login_form">
         <div class="text_input_wrapper">
           <p>Login </p>
           <div class="text_input">
-            <input type="text" name="login" placeholder="jan.kowalski" />
+            <input type="text" name="username" placeholder="jan.kowalski" />
           </div>
         </div>
 
