update `front_end.md` & `login/index.html`

--- a/src/main/resources/static/login/index.html
+++ b/src/main/resources/static/login/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-  <link href="../css/main.css" rel="stylesheet" />
-  <link href="../css/login.css" rel="stylesheet" />
+  <link href="/css/main.css" rel="stylesheet" />
+  <link href="/css/login.css" rel="stylesheet" />
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
@@ -12,7 +12,7 @@
 <body>
   <div class="content">
     <div class="logo">
-      <img src="../images/v1_10.png">
+      <img src="/images/v1_10.png">
       <p>Liczydło kalorii </p>
     </div>
     <div class="side_panel">
@@ -38,7 +38,7 @@
     </div>
   </div>
   
-  <script src="../js/tools.js"></script>
+  <script src="/js/tools.js"></script>
   <script src="login.js"></script>
 </body>
 
