Html views moved to `resources`

--- a/src/main/resources/static/calculator/calculator.html
+++ b/src/main/resources/static/calculator/calculator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../css/style_calculator.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
     <title>CALCULATOR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +13,7 @@
     <main>
         <header>
             <div class="logo-container">
-                <img src="../img/logo_io.svg">
+                <img src="../images/logo_io.svg">
                 <h2>Liczydło kalorii</h2>
             </div>
             <div class="frame">Twoja aktualna waga: 73,5kg</div>
