--- a/src/main/resources/static/calendar/calendar.html
+++ b/src/main/resources/static/calendar/calendar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/style_calendar.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
     <title>CALENDAR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +14,7 @@
     <main>
         <header>
             <div class="logo-container">
-                <img src="../img/logo_io.svg">
+                <img src="../images/logo_io.svg">
                 <h2>Liczydło kalorii</h2>
             </div>
             <div class="frame">Twoja aktualna waga: 73,5kg</div>
@@ -43,5 +45,5 @@
         </section>
     </main>
 </div>
-<script src="../js/calendar.js"></script>
+<script src="calendar.js"></script>
 </body>
