--- a/src/main/resources/static/day_plan/day_plan.html
+++ b/src/main/resources/static/day_plan/day_plan.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../css/style_day_plan.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
     <title>DAY PLAN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +13,7 @@
     <main>
         <header>
             <div class="logo-container">
-                <img src="../img/logo_io.svg">
+                <img src="../images/logo_io.svg">
                 <h2>Liczydło kalorii</h2>
             </div>
             <div class="frame">Twoja aktualna waga: 73,5kg</div>
@@ -22,7 +24,7 @@
                 <div class="add-item">
                     <p>Wyszukaj produkt</p>
                     <input class="input-search-item" type="text" placeholder="Add meal">
-                    <button class="button button-add">Dodaj</button>
+                    <button class="button-add">Dodaj</button>
                 </div>
                 <div class="calories">
                     <p>Kalorie: 2137 kcal</p>
@@ -45,7 +47,7 @@
                 </ul>
             </div>
             <div class="button-save-container">
-                <button class="button button-save">Zapisz</button>
+                <button class="button-save">Zapisz</button>
             </div>
         </section>
     </main>
