--- a/src/main/resources/static/home/home.html
+++ b/src/main/resources/static/home/home.html
@@ -10,40 +10,36 @@
 </head>
 
 <body>
-    <div class="base-container">
-        <nav></nav>
-        <main>
-            <header>
-                <div class="logo-container">
-                    <img src="../images/logo_io.svg">
-                    <h2>Liczydło kalorii</h2>
-                </div>
-                <div class="frame">Twoja aktualna waga: 73,5kg</div>
-                <a href="#" class="frame">Wyloguj sie</a>
-            </header>
-            <section class="menu">
-                <div class="name-container">
-                    <div class="name">
-                        <h2>Witaj ...</h2>
-                    </div>
-                    <button class="pronouns">Wybierz zaimki</button>
-                </div>
-                <div class="buttons">
-                    <button class="calendar">Kalendarz</button>
-                    <button class="recipes">Przepisy</button>
-                    <button class="add-meal">Dodaj posiłek</button>
-                    <button class="summary">Podsumowania</button>
+    <header>
+        <div class="logo-container">
+            <img src="../images/logo_io.svg">
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <main>
+        <div class="name-container">
+            <div class="name">
+                <h2 id="greeting">Witaj</h2>
+            </div>
+            <button class="pronouns">Wybierz zaimki</button>
+        </div>
+        <div class="buttons">
+            <button class="calendar">Kalendarz</button>
+            <button class="recipes">Przepisy</button>
+            <button class="add-meal">Dodaj posiłek</button>
+            <button class="summary">Podsumowania</button>
 
-                    <button class="add-product">Dodaj produkt</button>
-                    <button class="xyz1">XYZ</button>
-                    <button class="xyz2">XYZ</button>
-                    <button class="xyz3">XYZ</button>
+            <button class="add-product">Dodaj produkt</button>
+            <button class="xyz1">XYZ</button>
+            <button class="xyz2">XYZ</button>
+            <button class="xyz3">XYZ</button>
 
-                    <button class="xyz4">XYZ</button>
-                </div>
-            </section>
-        </main>
-    </div>
+            <button class="xyz4">XYZ</button>
+        </div>
+    </main>
 </body>
 
 </html>
