--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/style_add_product.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style_add_product.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>ADD PRODUCT</title>
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+
 <body>
-<div class="base-container">
-    <nav></nav>
-    <main>
-        <header>
-            <div class="logo-container">
-                <img src="../images/logo_io.svg">
-                <h2>Liczydło kalorii</h2>
-            </div>
-            <div class="frame">Twoja aktualna waga: 73,5kg</div>
-            <a href="#" class="frame">Wyloguj sie</a>
-        </header>
-        <section class="add-product">
-            <div class="input-form">
-                <div class="add">
-                    <div class="inputs">
-                        <input class="name" type="text" placeholder="product">
-                        <input class="weight" type="number" placeholder="69">
-                        g
-                        <input class="kcal" type="number" placeholder="69">
-                        kcal
+    <div class="base-container">
+        <nav></nav>
+        <main>
+            <header>
+                <div class="logo-container">
+                    <img src="/images/logo_io.svg">
+                    <h2>Liczydło kalorii</h2>
+                </div>
+                <div class="frame">Twoja aktualna waga: 73,5kg</div>
+                <a href="/logout" class="frame">Wyloguj sie</a>
+            </header>
+            <section class="add-product">
+                <div class="input-form">
+                    <div class="add">
+                        <div class="inputs">
+                            <input class="name" type="text" placeholder="product">
+                            <input class="weight" type="number" placeholder="69">
+                            g
+                            <input class="kcal" type="number" placeholder="69">
+                            kcal
+                        </div>
+                        <button class="button-form button-add">Dodaj</button>
                     </div>
-                    <button class="button-form button-add">Dodaj</button>
+                    <div class="search">
+                        <input class="name" type="text" placeholder="product">
+                        <button class="button-form button-search">Szukaj</button>
+                    </div>
                 </div>
-                <div class="search">
-                    <input class="name" type="text" placeholder="product">
-                    <button class="button-form button-search">Szukaj</button>
+                <div class="product-list">
+                    <div class="product">
+                        <p>jablko</p>
+                        <span>Produkt na 100g</span>
+                        <span>posiada 87 kcal</span>
+                    </div>
                 </div>
-            </div>
-            <div class="product-list">
-                <div class="product">
-                    <p>jablko</p>
-                    <span>Produkt na 100g</span>
-                    <span>posiada 87 kcal</span>
-                </div>
-            </div>
-        </section>
-    </main>
-</div>
+            </section>
+        </main>
+    </div>
 </body>
