--- a/src/main/resources/static/calculator.html
+++ b/src/main/resources/static/calculator.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/style_calculator.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style_calculator.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>CALCULATOR</title>
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+
 <body>
-<div class="base-container">
-    <nav></nav>
-    <main>
-        <header>
-            <div class="logo-container">
-                <img src="../images/logo_io.svg">
-                <h2>Liczydło kalorii</h2>
-            </div>
-            <div class="frame">Twoja aktualna waga: 73,5kg</div>
-            <a href="#" class="frame">Wyloguj sie</a>
-        </header>
-        <section class="calculator">
+    <div class="base-container">
+        <nav></nav>
+        <main>
+            <header>
+                <div class="logo-container">
+                    <img src="/images/logo_io.svg">
+                    <h2>Liczydło kalorii</h2>
+                </div>
+                <div class="frame">Twoja aktualna waga: 73,5kg</div>
+                <a href="/logout" class="frame">Wyloguj sie</a>
+            </header>
+            <section class="calculator">
                 <div class="future">
                     <div class="input-info">
                         Planowana waga:
@@ -35,11 +37,11 @@
                     </div>
                     <button type="button" class="button-save">Zapisz</button>
                 </div>
-            <div class="balance">
-                <p>Aby osiagnąć swój cel musisz spożywać:</p>
-                <p>2137 kcal</p>
-            </div>
-        </section>
-    </main>
-</div>
+                <div class="balance">
+                    <p>Aby osiagnąć swój cel musisz spożywać:</p>
+                    <p>2137 kcal</p>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
