--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link rel="stylesheet" type="text/css" href="../css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/home.css" />
     <title>Home</title>
 </head>
 
 <body>
     <header>
         <div class="logo-container">
-            <img src="../images/logo_io.svg">
+            <img src="/images/logo_io.svg">
             <h2>Liczydło kalorii</h2>
         </div>
         <div class="spacing"></div>
