--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,44 +2,44 @@
 <html>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-  <link href="/css/main.css" rel="stylesheet" />
-  <link href="/css/login.css" rel="stylesheet" />
-  <meta charset="UTF-8">
-  <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+    <link href="/css/main.css" rel="stylesheet" />
+    <link href="/css/login.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 
 <body>
-  <div class="content">
-    <div class="logo">
-      <img src="/images/v1_10.png">
-      <p>Liczydło kalorii </p>
-    </div>
-    <div class="side_panel">
-      <p>Logowanie</p>
-      <form action="/login" method="post" class="login_panel" id="login_form">
-        <div class="text_input_wrapper">
-          <p>Login </p>
-          <div class="text_input">
-            <input type="text" name="username" placeholder="jan.kowalski" />
-          </div>
+    <div class="content">
+        <div class="logo">
+            <img src="/images/logo_io.svg">
+            <p>Liczydło kalorii </p>
         </div>
+        <div class="side_panel">
+            <p>Logowanie</p>
+            <form action="/login" method="post" class="login_panel" id="login_form">
+                <div class="text_input_wrapper">
+                    <p>Login </p>
+                    <div class="text_input">
+                        <input type="text" name="username" placeholder="jan.kowalski" />
+                    </div>
+                </div>
 
-        <div class="text_input_wrapper">
-          <p>Hasło</p>
-          <div class="text_input">
-            <input type="password" name="password" placeholder="*******">
-            <p>POKAŻ</p>
-          </div>
+                <div class="text_input_wrapper">
+                    <p>Hasło</p>
+                    <div class="text_input">
+                        <input type="password" name="password" placeholder="*******">
+                        <p>POKAŻ</p>
+                    </div>
+                </div>
+                <input class="button" type="submit" value="Zaloguj się" />
+                <p>Nie posiadasz konta? <a href="/register.html">Załóż już teraz</a></p>
+            </form>
         </div>
-        <input class="button" type="submit" value="Zaloguj się" />
-        <p>Nie posiadasz konta? <a href="#">Załóż już teraz</a></p>
-      </form>
     </div>
-  </div>
-  
-  <script src="/js/tools.js"></script>
-  <script src="login.js"></script>
+
+    <script src="/js/tools.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
