--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -10,42 +10,40 @@
 </head>
 
 <body>
-    <div class="base-container">
-        <nav></nav>
-        <main>
-            <header>
-                <div class="logo-container">
-                    <img src="/images/logo_io.svg">
-                    <h2>Liczydło kalorii</h2>
-                </div>
-                <div class="frame">Twoja aktualna waga: 73,5kg</div>
-                <a href="/logout" class="frame">Wyloguj sie</a>
-            </header>
-            <section class="add-product">
-                <div class="input-form">
-                    <div class="add">
-                        <div class="inputs">
-                            <input class="name" type="text" placeholder="product">
-                            <input class="weight" type="number" placeholder="69">
-                            g
-                            <input class="kcal" type="number" placeholder="69">
-                            kcal
-                        </div>
-                        <button class="button-form button-add">Dodaj</button>
-                    </div>
-                    <div class="search">
+    <header>
+        <div class="logo-container">
+            <img src="/images/logo_io.svg">
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <main>
+        <section class="add-product">
+            <div class="input-form">
+                <div class="add">
+                    <div class="inputs">
                         <input class="name" type="text" placeholder="product">
-                        <button class="button-form button-search">Szukaj</button>
+                        <input class="weight" type="number" placeholder="69">
+                        g
+                        <input class="kcal" type="number" placeholder="69">
+                        kcal
                     </div>
+                    <button class="button-form button-add">Dodaj</button>
                 </div>
-                <div class="product-list">
-                    <div class="product">
-                        <p>jablko</p>
-                        <span>Produkt na 100g</span>
-                        <span>posiada 87 kcal</span>
-                    </div>
+                <div class="search">
+                    <input class="name" type="text" placeholder="product">
+                    <button class="button-form button-search">Szukaj</button>
                 </div>
-            </section>
-        </main>
-    </div>
+            </div>
+            <div class="product-list">
+                <div class="product">
+                    <p>jablko</p>
+                    <span>Produkt na 100g</span>
+                    <span>posiada 87 kcal</span>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
