--- a/src/main/resources/static/calculator.html
+++ b/src/main/resources/static/calculator.html
@@ -10,38 +10,36 @@
 </head>
 
 <body>
-    <div class="base-container">
-        <nav></nav>
-        <main>
-            <header>
-                <div class="logo-container">
-                    <img src="/images/logo_io.svg">
-                    <h2>Liczydło kalorii</h2>
+    <header>
+        <div class="logo-container">
+            <img src="/images/logo_io.svg">
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <main>
+        <section class="calculator">
+            <div class="future">
+                <div class="input-info">
+                    Planowana waga:
+                    <input name="weight" type="number" placeholder="70">
+                    kg
                 </div>
-                <div class="frame">Twoja aktualna waga: 73,5kg</div>
-                <a href="/logout" class="frame">Wyloguj sie</a>
-            </header>
-            <section class="calculator">
-                <div class="future">
-                    <div class="input-info">
-                        Planowana waga:
-                        <input name="weight" type="number" placeholder="70">
-                        kg
-                    </div>
-                    <button type="button" class="button-save">Zapisz</button>
+                <button type="button" class="button-save">Zapisz</button>
+            </div>
+            <div class="future">
+                <div class="input-info">
+                    Planowany termin
+                    <input name="date" type="date">
                 </div>
-                <div class="future">
-                    <div class="input-info">
-                        Planowany termin
-                        <input name="date" type="date">
-                    </div>
-                    <button type="button" class="button-save">Zapisz</button>
-                </div>
-                <div class="balance">
-                    <p>Aby osiagnąć swój cel musisz spożywać:</p>
-                    <p>2137 kcal</p>
-                </div>
-            </section>
-        </main>
-    </div>
+                <button type="button" class="button-save">Zapisz</button>
+            </div>
+            <div class="balance">
+                <p>Aby osiagnąć swój cel musisz spożywać:</p>
+                <p>2137 kcal</p>
+            </div>
+        </section>
+    </main>
 </body>
