--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -12,41 +12,39 @@
 </head>
 
 <body>
-    <div class="base-container">
-        <nav></nav>
-        <main>
-            <header>
-                <div class="logo-container">
-                    <img src="/images/logo_io.svg">
-                    <h2>Liczydło kalorii</h2>
-                </div>
-                <div class="frame">Twoja aktualna waga: 73,5kg</div>
-                <a href="/logout" class="frame">Wyloguj sie</a>
-            </header>
-            <section class="calendar-container">
-                <div class='calendar'>
-                    <div class="wrapper">
-                        <p class="current-date">December 29</p>
-                        <div class="icons">
-                            <span id="prev" class="material-symbols-rounded">chevron_left</span>
-                            <span id="next" class="material-symbols-rounded">chevron_right</span>
+    <header>
+        <div class="logo-container">
+            <img src="/images/logo_io.svg">
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <main>
+        <section class="calendar-container">
+            <div class='calendar'>
+                <div class="wrapper">
+                    <p class="current-date">December 29</p>
+                    <div class="icons">
+                        <span id="prev" class="material-symbols-rounded">chevron_left</span>
+                        <span id="next" class="material-symbols-rounded">chevron_right</span>
+                    </div>
+                    <div class="cal">
+                        <div class="weeks">
+                            <span>Sun</span>
+                            <span>Mon</span>
+                            <span>Tue</span>
+                            <span>Wed</span>
+                            <span>Thu</span>
+                            <span>Fri</span>
+                            <span>Sat</span>
                         </div>
-                        <div class="cal">
-                            <div class="weeks">
-                                <span>Sun</span>
-                                <span>Mon</span>
-                                <span>Tue</span>
-                                <span>Wed</span>
-                                <span>Thu</span>
-                                <span>Fri</span>
-                                <span>Sat</span>
-                            </div>
-                            <div class="days"></div>
-                        </div>
+                        <div class="days"></div>
                     </div>
                 </div>
-            </section>
-        </main>
-    </div>
+            </div>
+        </section>
+    </main>
     <script src="/js/calendar.js"></script>
 </body>
