--- a/src/main/resources/static/day_plan.html
+++ b/src/main/resources/static/day_plan.html
@@ -10,48 +10,48 @@
 </head>
 
 <body>
-    <div class="base-container">
-        <nav></nav>
-        <main>
-            <header>
-                <div class="logo-container">
-                    <img src="/images/logo_io.svg">
-                    <h2>Liczydło kalorii</h2>
-                </div>
-                <div class="frame">Twoja aktualna waga: 73,5kg</div>
-                <a href="/logout" class="frame">Wyloguj sie</a>
-            </header>
-            <section class="day-plan">
-                <div class="add-item-calories-container">
-                    <div class="add-item">
-                        <p>Wyszukaj produkt</p>
-                        <input class="input-search-item" type="text" placeholder="Add meal">
-                        <button class="button-add">Dodaj</button>
+    <header>
+        <div class="logo-container">
+            <img src="/images/logo_io.svg">
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <main>
+        <section class="day-plan">
+            <div class="add-item-calories-container">
+                <div class="add-item">
+                    <p>Wyszukaj produkt</p>
+                    <div class="text_input">
+                        <input type="text" placeholder="Add meal">
                     </div>
-                    <div class="calories">
-                        <p>Kalorie: 2137 kcal</p>
-                    </div>
+                    <button class="button small-button">Dodaj</button>
                 </div>
-                <div class="item-list">
-                    <ul>
-                        <li>
-                            jablko
-                        </li>
-                        <li>
-                            pizza
-                        </li>
-                        <li>
-                            gruszka
-                        </li>
-                        <li>
-                            kotlet schabowy
-                        </li>
-                    </ul>
+                <div class="calories">
+                    <p>Kalorie: 2137 kcal</p>
                 </div>
-                <div class="button-save-container">
-                    <button class="button-save">Zapisz</button>
-                </div>
-            </section>
-        </main>
-    </div>
+            </div>
+            <div class="item-list">
+                <ul>
+                    <li>
+                        jablko
+                    </li>
+                    <li>
+                        pizza
+                    </li>
+                    <li>
+                        gruszka
+                    </li>
+                    <li>
+                        kotlet schabowy
+                    </li>
+                </ul>
+            </div>
+            <div class="button-save-container">
+                <button class="button wide-button">Zapisz</button>
+            </div>
+        </section>
+    </main>
 </body>
