--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -30,11 +30,11 @@
                         <input class="kcal" type="number" placeholder="69">
                         kcal
                     </div>
-                    <button class="button-form button-add">Dodaj</button>
+                    <button class="button wide-button">Dodaj</button>
                 </div>
                 <div class="search">
                     <input class="name" type="text" placeholder="product">
-                    <button class="button-form button-search">Szukaj</button>
+                    <button class="button wide-button">Szukaj</button>
                 </div>
             </div>
             <div class="product-list">
