--- a/src/main/resources/static/calculator.html
+++ b/src/main/resources/static/calculator.html
@@ -27,14 +27,14 @@
                     <input name="weight" type="number" placeholder="70">
                     kg
                 </div>
-                <button type="button" class="button-save">Zapisz</button>
+                <button type="button" class="button wide-button">Zapisz</button>
             </div>
             <div class="future">
                 <div class="input-info">
                     Planowany termin
                     <input name="date" type="date">
                 </div>
-                <button type="button" class="button-save">Zapisz</button>
+                <button type="button" class="button wide-button">Zapisz</button>
             </div>
             <div class="balance">
                 <p>Aby osiagnąć swój cel musisz spożywać:</p>
