adjust gapps, margins, paddings

--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -22,7 +22,7 @@
     <main>
         <section class="add-product">
             <div class="input-form">
-                <div class="add">
+                <div class="input-box">
                     <div class="inputs">
                         <input class="name" type="text" placeholder="product">
                         <input class="weight" type="number" placeholder="69">
@@ -32,7 +32,7 @@
                     </div>
                     <button class="button wide-button">Dodaj</button>
                 </div>
-                <div class="search">
+                <div class="input-box">
                     <input class="name" type="text" placeholder="product">
                     <button class="button wide-button">Szukaj</button>
                 </div>
