adjust `calculator.html`

--- a/src/main/resources/static/day_plan.html
+++ b/src/main/resources/static/day_plan.html
@@ -50,7 +50,7 @@
                 </ul>
             </div>
             <div class="button-save-container">
-                <button class="button wide-button">Zapisz</button>
+                <button class="button small-button">Zapisz</button>
             </div>
         </section>
     </main>
