--- a/src/main/resources/static/calculator.html
+++ b/src/main/resources/static/calculator.html
@@ -21,24 +21,29 @@
     </header>
     <main>
         <section class="calculator">
-            <div class="future">
-                <div class="input-info">
-                    Planowana waga:
-                    <input name="weight" type="number" placeholder="70">
-                    kg
+            <div class="left">
+                <div class="future">
+                    <div class="input-info">
+                        <p> Planowana waga: </p>
+                        <input class="text_input text_input_small border-none" name="weight" type="number"
+                            placeholder="70" size="3">
+                        <p>kg</p>
+                    </div>
+                    <button type="button" class="button wide-button">Zapisz</button>
                 </div>
-                <button type="button" class="button wide-button">Zapisz</button>
-            </div>
-            <div class="future">
-                <div class="input-info">
-                    Planowany termin
-                    <input name="date" type="date">
+                <div class="future">
+                    <div class="input-info">
+                        Planowany termin
+                        <input name="date" type="date">
+                    </div>
+                    <button type="button" class="button wide-button">Zapisz</button>
                 </div>
-                <button type="button" class="button wide-button">Zapisz</button>
             </div>
-            <div class="balance">
-                <p>Aby osiagnąć swój cel musisz spożywać:</p>
-                <p>2137 kcal</p>
+            <div class="right">
+                <div class="balance">
+                    <p>Aby osiagnąć swój cel musisz spożywać:</p>
+                    <p>2137 kcal</p>
+                </div>
             </div>
         </section>
     </main>
