--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -24,16 +24,16 @@
             <div class="input-form">
                 <div class="input-box">
                     <div class="inputs">
-                        <input class="name" type="text" placeholder="product">
-                        <input class="weight" type="number" placeholder="69">
+                        <input class="text_input" type="text" placeholder="product">
+                        <input class="text_input" type="number" placeholder="69" size="4">
                         g
-                        <input class="kcal" type="number" placeholder="69">
+                        <input class="text_input" type="number" placeholder="69" size="3">
                         kcal
                     </div>
                     <button class="button wide-button">Dodaj</button>
                 </div>
                 <div class="input-box">
-                    <input class="name" type="text" placeholder="product">
+                    <input class="text_input" type="text" placeholder="product">
                     <button class="button wide-button">Szukaj</button>
                 </div>
             </div>
