add navigation buttons

--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -14,13 +14,21 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="/images/logo_io.svg">
+            <a href="/home.html">
+                <img src="/images/logo_io.svg">
+            </a>
             <h2>Liczydło kalorii</h2>
         </div>
         <div class="spacing"></div>
         <div class="frame">Twoja aktualna waga: 73,5kg</div>
         <a href="/logout" class="frame">Wyloguj sie</a>
     </header>
+    <div class="buttons">
+        <a href="/calendar.html">Kalendarz</a>
+        <a href="/calculator.html">Kalkulator</a>
+        <a href="/day_plan.html">Plan dnia</a>
+        <a href="/add_product.html">Dodaj produkt</a>
+    </div>
     <main>
         <section class="calendar-container">
             <div class='calendar'>
