--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -13,32 +13,27 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="/images/logo_io.svg">
+            <a href="/home.html">
+                <img src="/images/logo_io.svg">
+            </a>
             <h2>Liczydło kalorii</h2>
         </div>
         <div class="spacing"></div>
         <div class="frame">Twoja aktualna waga: 73,5kg</div>
         <a href="/logout" class="frame">Wyloguj sie</a>
     </header>
+    <div class="buttons">
+        <a href="/calendar.html">Kalendarz</a>
+        <a href="/calculator.html">Kalkulator</a>
+        <a href="/day_plan.html">Plan dnia</a>
+        <a href="/add_product.html">Dodaj produkt</a>
+    </div>
     <main>
         <div class="name-container">
             <div class="name">
                 <h2 id="greeting">Witaj</h2>
             </div>
             <button class="pronouns">Wybierz zaimki</button>
-        </div>
-        <div class="buttons">
-            <button class="calendar">Kalendarz</button>
-            <button class="recipes">Przepisy</button>
-            <button class="add-meal">Dodaj posiłek</button>
-            <button class="summary">Podsumowania</button>
-
-            <button class="add-product">Dodaj produkt</button>
-            <button class="xyz1">XYZ</button>
-            <button class="xyz2">XYZ</button>
-            <button class="xyz3">XYZ</button>
-
-            <button class="xyz4">XYZ</button>
         </div>
     </main>
 </body>
