--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/style_calendar.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <script src="https://kit.fontawesome.com/a0e770b090.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style_calendar.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>CALENDAR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
+
 <body>
-<div class="base-container">
-    <nav></nav>
+    <header>
+        <div class="logo-container">
+            <a href="/home.html">
+                <img src="/images/logo_io.svg">
+            </a>
+            <h2>Liczydło kalorii</h2>
+        </div>
+        <div class="spacing"></div>
+        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <a href="/logout" class="frame">Wyloguj sie</a>
+    </header>
+    <div class="buttons">
+        <a href="/calendar.html">Kalendarz</a>
+        <a href="/calculator.html">Kalkulator</a>
+        <a href="/day_plan.html">Plan dnia</a>
+        <a href="/add_product.html">Dodaj produkt</a>
+    </div>
     <main>
-        <header>
-            <div class="logo-container">
-                <img src="../images/logo_io.svg">
-                <h2>Liczydło kalorii</h2>
-            </div>
-            <div class="frame">Twoja aktualna waga: 73,5kg</div>
-            <a href="#" class="frame">Wyloguj sie</a>
-        </header>
         <section class="calendar-container">
             <div class='calendar'>
                 <div class="wrapper">
@@ -44,6 +54,5 @@
             </div>
         </section>
     </main>
-</div>
-<script src="calendar.js"></script>
+    <script src="/js/calendar.js"></script>
 </body>
