added register page

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -4,9 +4,9 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link href="/css/main.css" rel="stylesheet" />
-    <link href="/css/login.css" rel="stylesheet" />
+    <link href="/css/register.css" rel="stylesheet" />
     <meta charset="UTF-8">
-    <title>Resejstracja</title>
+    <title>Rejestracja</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <p>Liczydło kalorii </p>
         </div>
         <div class="side_panel">
-            <p>Logowanie</p>
+            <p>Rejestracja</p>
             <form action="/api/users/register" class="register_panel" id="register_form">
                 <div class="text_input_wrapper">
                     <p>Login </p>
