removed kcal, changed list

--- a/src/main/resources/static/day_plan.html
+++ b/src/main/resources/static/day_plan.html
@@ -33,32 +33,14 @@
                 <div class="add-item">
                     <p>Wyszukaj produkt</p>
                     <div class="text_input">
-                        <input type="text" placeholder="Add meal">
+                        <input type="text" placeholder="Nazwa produktu">
                     </div>
                     <button class="button small-button">Dodaj</button>
                 </div>
-                <div class="calories">
-                    <p>Kalorie: 2137 kcal</p>
-                </div>
             </div>
             <div class="item-list">
-                <ul>
-                    <li>
-                        jablko
-                    </li>
-                    <li>
-                        pizza
-                    </li>
-                    <li>
-                        gruszka
-                    </li>
-                    <li>
-                        kotlet schabowy
-                    </li>
+                <ul id="empty-list">
                 </ul>
-            </div>
-            <div class="button-save-container">
-                <button class="button small-button">Zapisz</button>
             </div>
         </section>
     </main>
