--- a/src/main/resources/static/day_plan.html
+++ b/src/main/resources/static/day_plan.html
@@ -29,19 +29,21 @@
     </div>
     <main>
         <section class="day-plan">
-            <div class="add-item-calories-container">
-                <div class="add-item">
-                    <p>Wyszukaj produkt</p>
-                    <div class="text_input">
-                        <input type="text" placeholder="Nazwa produktu">
-                    </div>
-                    <button class="button small-button">Dodaj</button>
+            <div class="add-item">
+                <p>Wyszukaj produkt</p>
+                <div class="text_input">
+                    <input type="text" placeholder="Nazwa produktu" oninput="searchPromptUpdate(this)">
                 </div>
+                <button class="button small-button" onclick="addToItemList()">Dodaj</button>
             </div>
-            <div class="item-list">
-                <ul id="empty-list">
-                </ul>
+            <div id="search_results">
+
+            </div>
+            <div id="item-list">
+
             </div>
         </section>
     </main>
+    <script src="/js/tools.js"></script>
+    <script src="/js/searchForProducts.js"></script>
 </body>
