--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -19,7 +19,15 @@
             <h2>Liczydło kalorii</h2>
         </div>
         <div class="spacing"></div>
-        <div class="frame">Twoja aktualna waga: 73,5kg</div>
+        <div class="frame">
+            Wzrost: <p id="header_height"></p>
+        </div>
+        <div class="frame">
+            Wiek: <p id="header_age"></p>
+        </div>
+        <div class="frame">
+            Waga: <p id="header_weight"></p>
+        </div>
         <a href="/logout" class="frame">Wyloguj sie</a>
     </header>
     <div class="buttons">
@@ -36,6 +44,8 @@
             <button class="pronouns">Wybierz zaimki</button>
         </div>
     </main>
+    <script src="/js/tools.js"></script>
+    <script src="/js/infoInHeader.js"></script>
 </body>
 
 </html>
