refactor displayed message

--- a/src/main/resources/static/calculator.html
+++ b/src/main/resources/static/calculator.html
@@ -55,7 +55,24 @@
             <div class="right">
                 <div class="balance">
                     <p>Aby osiagnąć swój cel musisz spożywać:</p>
-                    <p id="result">2137 kcal</p>
+                    <p>
+                        <span id="intake"> --- </span>
+                        kcal
+                    </p>
+                    <br>
+                    <p>Całkowite dzienne zapotrzebowanie (TDEE) </p>
+                    <p>
+                        <span id="tdee"> --- </span>
+                        kcal
+                    </p>
+                    <br>
+                    <p>Podstawowa przemiana materii (BMR) </p>
+                    <p>
+                        <span id="bmr"> --- </span>
+                        kcal
+                    </p>
+                    <br>
+                    <span id="message"></span>
                 </div>
             </div>
         </section>
