searching products in `add_product.html`

--- a/src/main/resources/static/day_plan.html
+++ b/src/main/resources/static/day_plan.html
@@ -40,7 +40,7 @@
             <div class="add-item">
                 <p>Wyszukaj produkt</p>
                 <div class="text_input">
-                    <input type="text" placeholder="Nazwa produktu" oninput="searchPromptUpdate(this)">
+                    <input type="text" placeholder="jabłko" oninput="searchPromptUpdate(this)">
                 </div>
                 <button class="button small-button" onclick="addToItemList()">Dodaj</button>
             </div>
