--- a/src/main/resources/static/add_product.html
+++ b/src/main/resources/static/add_product.html
@@ -41,27 +41,25 @@
                 <div class="input-box">
                     <div class="inputs">
                         <input class="text_input" type="text" placeholder="product">
-                        <input class="text_input" type="number" placeholder="69" size="4">
+                        <input class="text_input" type="number" placeholder="68" size="4">
                         g
-                        <input class="text_input" type="number" placeholder="69" size="3">
+                        <input class="text_input" type="number" placeholder="68" size="3">
                         kcal
                     </div>
                     <button class="button wide-button">Dodaj</button>
                 </div>
                 <div class="input-box">
-                    <input class="text_input" type="text" placeholder="product">
-                    <button class="button wide-button">Szukaj</button>
+                    <h3>Szukaj produktu</h3>
+                    <div class="text_input">
+                        <input type="text" placeholder="jabłko" oninput="searchPromptUpdate(this)">
+                    </div>
                 </div>
             </div>
-            <div class="product-list">
-                <div class="product">
-                    <p>jablko</p>
-                    <span>Produkt na 100g</span>
-                    <span>posiada 87 kcal</span>
-                </div>
+            <div id="search_results">
             </div>
         </section>
     </main>
     <script src="/js/tools.js"></script>
     <script src="/js/infoInHeader.js"></script>
+    <script src="/js/searchForProducts.js"></script>
 </body>
